--- a/index.html
+++ b/index.html
@@ -5,10 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="Images/.">
 </head>
 <body>
+    <div class="container">
+    <img class="Hero" src="Images/bg.jpeg">
+    <div class="logo">
+        <h1>Coachella</h1>
+    </div>  
+    </div>
+
+    <div class="row">
+        <h1>Artists</h1>
+        <div class="card">
+            <img src="Images/ariana.jpeg" alt="Ariana" style="width:100%">
+            <div class="container">
+              <h4><b>Ariana Grande</b></h4> 
+            </div>
+        </div>
+        <div class="card">
+                <img src="Images/gambino.jpeg" alt="Ariana" style="width:100%">
+                <div class="container">
+                  <h4><b>Childish Gambino</b></h4> 
+                </div>
+        </div>
+        <div class="card">
+                    <img src="Images/blackpink.jpeg" alt="Ariana" style="width:100%">
+                    <div class="container">
+                      <h4><b>Black Pink</b></h4> 
+                    </div>
+        </div>
+    </div>
+
+
+
+
+
+    
     
 </body>
 </html>
